# WispMark

./: .firebaserc  .gitignore  APP_STORE.md  APP_STORE_MARKETING_COPY.md  FIRESTORE_SYNC_SETUP.md  FirestoreSync.swift  GITHUB_PAGES_SETUP.md  HELP.md  Info.plist  SIGNING.md  WispMark  build_app.sh  firestore.rules  install.sh  main.swift  market-plan.md  project.yml  run.sh  test.md  todo.md  todo_windows.md  workspace-feature-plan.md  workspace_idea
.github/workflows/: build-windows.yml
FloatMD-Windows/: README.md  index.html  package-lock.json  package.json  vite.config.ts
FloatMD-Windows/src/: App.tsx  README.md
FloatMD-Windows/src-tauri/: .portable.example  API.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INDEX.md  PLATFORM_COMPARISON.md  QUICKSTART.md  README.md  tauri.conf.json
FloatMD-Windows/src-tauri/capabilities/: default.json
FloatMD-Windows/src-tauri/icons/: README.md
FloatMD-Windows/src-tauri/src/: hotkeys.rs  injection.rs  lib.rs  main.rs  (+1 more)
FloatMD.app/Contents/: Info.plist
WispMark-Windows/: README.md  index.html  package-lock.json  package.json
WispMark-Windows/src/: App.tsx  README.md
WispMark-Windows/src-tauri/: .gitignore  API.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INDEX.md  PLATFORM_COMPARISON.md  QUICKSTART.md  README.md  tauri.conf.json
WispMark-Windows/src-tauri/capabilities/: default.json
WispMark-Windows/src-tauri/icons/: README.md
WispMark-Windows/src-tauri/src/: injection.rs  storage.rs
WispMark-macOS.xcodeproj/: project.pbxproj
WispMark.app/Contents/: Info.plist
docs/: index.html  privacy.html  support.html
(+46 files in other folders)
