[package]
name = "wispmark"
version = "1.0.0"
description = "WispMark - Floating Markdown Notes for Windows"
authors = ["WispMark Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset", "tray-icon", "image-png", "image-ico"] }
tauri-plugin-shell = "2.0"
tauri-plugin-global-shortcut = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
